039-AKSEnterpriseGrade/Coach/Solutions/Challenge-02/Accelerator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: <YOURINGRESSPUBLICIPADDRESS>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
